Introduce small delay to avoid updating Pty size too quickly

Some terminal application does not update its display when Pty size
changes quickly in a row.  Zsh seems a typical example.

Thanks to Franz Fellner<alpine.art.de@googlemail.com> for the research
and solution.

BUG: 164099
BUG: 250212
FIXED-IN: 4.8.3
(cherry picked from commit ccfc3f859c5695cc08895570efd0831db0d3b9b0)