src/Session.cpp
@@ -27,6 +27,7 @@
 // Standard
 #include <stdlib.h>
 #include <signal.h>
+#include <unistd.h>
 
 // Qt
 #include <QtGui/QApplication>
@@ -742,6 +743,7 @@ void Session::refresh()
 
     const QSize existingSize = _shellProcess->windowSize();
     _shellProcess->setWindowSize(existingSize.height(),existingSize.width()+1);
+    usleep(10); // introduce small delay to avoid changing size too quickly
     _shellProcess->setWindowSize(existingSize.height(),existingSize.width());
 }
 
